src/bnfc/ParLatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParLatte.y
-----------------------------------------------------------------------------

state 75 contains 1 shift/reduce conflicts.
state 146 contains 1 shift/reduce conflicts.

rule 40 is unused
rule 41 is unused
rule 48 is unused
rule 49 is unused
rule 50 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> ClassDef                                 (5)
	TopDef -> FuncDef                                  (6)
	FuncDef -> Type Ident '(' ListArg ')' Block        (7)
	Arg -> Type Ident                                  (8)
	ClassMember -> Type Ident ';'                      (9)
	ClassMember -> FuncDef                             (10)
	ClassDef -> 'class' Ident '{' ListClassMember '}'   (11)
	ClassDef -> 'class' Ident 'extends' Ident '{' ListClassMember '}'   (12)
	ListArg ->                                         (13)
	ListArg -> Arg                                     (14)
	ListArg -> Arg ',' ListArg                         (15)
	ListTopDef -> TopDef                               (16)
	ListTopDef -> TopDef ListTopDef                    (17)
	ListClassMember ->                                 (18)
	ListClassMember -> ListClassMember ClassMember     (19)
	Block -> '{' ListStmt '}'                          (20)
	Stmt -> ';'                                        (21)
	Stmt -> Block                                      (22)
	Stmt -> Type ListItem ';'                          (23)
	Stmt -> Expr '=' Expr ';'                          (24)
	Stmt -> Expr '++' ';'                              (25)
	Stmt -> Expr '--' ';'                              (26)
	Stmt -> 'return' Expr ';'                          (27)
	Stmt -> 'return' ';'                               (28)
	Stmt -> 'if' '(' Expr ')' Stmt                     (29)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (30)
	Stmt -> 'while' '(' Expr ')' Stmt                  (31)
	Stmt -> 'for' '(' Type Ident ':' Expr ')' Stmt     (32)
	Stmt -> Expr ';'                                   (33)
	Item -> Ident                                      (34)
	Item -> Ident '=' Expr                             (35)
	ListStmt ->                                        (36)
	ListStmt -> ListStmt Stmt                          (37)
	ListItem -> Item                                   (38)
	ListItem -> Item ',' ListItem                      (39)
	ListIdent -> Ident                                 (40)
	ListIdent -> Ident ',' ListIdent                   (41)
	Type -> Ident                                      (42)
	Type -> 'int'                                      (43)
	Type -> 'string'                                   (44)
	Type -> 'boolean'                                  (45)
	Type -> 'void'                                     (46)
	Type -> Type '[]'                                  (47)
	ListType ->                                        (48)
	ListType -> Type                                   (49)
	ListType -> Type ',' ListType                      (50)
	Expr6 -> 'new' Type                                (51)
	Expr6 -> 'new' Type '[' Expr ']'                   (52)
	Expr6 -> Expr6 '.' Ident                           (53)
	Expr6 -> Expr6 '.' Ident '(' ListExpr ')'          (54)
	Expr6 -> Ident                                     (55)
	Expr6 -> Integer                                   (56)
	Expr6 -> 'true'                                    (57)
	Expr6 -> 'false'                                   (58)
	Expr6 -> String                                    (59)
	Expr6 -> Ident '(' ListExpr ')'                    (60)
	Expr6 -> Expr6 '[' Expr ']'                        (61)
	Expr6 -> '(' Expr ')'                              (62)
	Expr5 -> 'cast' '<' Ident ',' 'null' '>'           (63)
	Expr5 -> '-' Expr6                                 (64)
	Expr5 -> '!' Expr6                                 (65)
	Expr5 -> Expr6                                     (66)
	Expr4 -> Expr4 MulOp Expr5                         (67)
	Expr4 -> Expr5                                     (68)
	Expr3 -> Expr3 AddOp Expr4                         (69)
	Expr3 -> Expr4                                     (70)
	Expr2 -> Expr2 RelOp Expr3                         (71)
	Expr2 -> Expr3                                     (72)
	Expr1 -> Expr2 '&&' Expr1                          (73)
	Expr1 -> Expr2                                     (74)
	Expr -> Expr1 '||' Expr                            (75)
	Expr -> Expr1                                      (76)
	ListExpr ->                                        (77)
	ListExpr -> Expr                                   (78)
	ListExpr -> Expr ',' ListExpr                      (79)
	AddOp -> '+'                                       (80)
	AddOp -> '-'                                       (81)
	MulOp -> '*'                                       (82)
	MulOp -> '/'                                       (83)
	MulOp -> '%'                                       (84)
	RelOp -> '<'                                       (85)
	RelOp -> '<='                                      (86)
	RelOp -> '>'                                       (87)
	RelOp -> '>='                                      (88)
	RelOp -> '=='                                      (89)
	RelOp -> '!='                                      (90)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'cast'         { PT _ (TS _ 27) }
	'class'        { PT _ (TS _ 28) }
	'else'         { PT _ (TS _ 29) }
	'extends'      { PT _ (TS _ 30) }
	'false'        { PT _ (TS _ 31) }
	'for'          { PT _ (TS _ 32) }
	'if'           { PT _ (TS _ 33) }
	'int'          { PT _ (TS _ 34) }
	'new'          { PT _ (TS _ 35) }
	'null'         { PT _ (TS _ 36) }
	'return'       { PT _ (TS _ 37) }
	'string'       { PT _ (TS _ 38) }
	'true'         { PT _ (TS _ 39) }
	'void'         { PT _ (TS _ 40) }
	'while'        { PT _ (TS _ 41) }
	'{'            { PT _ (TS _ 42) }
	'||'           { PT _ (TS _ 43) }
	'}'            { PT _ (TS _ 44) }
	L_ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6
	FuncDef         rule  7
	Arg             rule  8
	ClassMember     rules 9, 10
	ClassDef        rules 11, 12
	ListArg         rules 13, 14, 15
	ListTopDef      rules 16, 17
	ListClassMember rules 18, 19
	Block           rule  20
	Stmt            rules 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33
	Item            rules 34, 35
	ListStmt        rules 36, 37
	ListItem        rules 38, 39
	ListIdent       rules 40, 41
	Type            rules 42, 43, 44, 45, 46, 47
	ListType        rules 48, 49, 50
	Expr6           rules 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62
	Expr5           rules 63, 64, 65, 66
	Expr4           rules 67, 68
	Expr3           rules 69, 70
	Expr2           rules 71, 72
	Expr1           rules 73, 74
	Expr            rules 75, 76
	ListExpr        rules 77, 78, 79
	AddOp           rules 80, 81
	MulOp           rules 82, 83, 84
	RelOp           rules 85, 86, 87, 88, 89, 90

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 10
	'class'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	FuncDef        goto state 6
	ClassDef       goto state 7
	ListTopDef     goto state 8
	Type           goto state 9

State 1

	Ident -> . L_ident                                  (rule 1)

	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'extends'      reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	'++'           reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'--'           reduce using rule 42
	'.'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'='            reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'['            reduce using rule 42
	'[]'           reduce using rule 42
	']'            reduce using rule 42
	'||'           reduce using rule 42
	L_ident        reduce using rule 42


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 16)
	ListTopDef -> TopDef . ListTopDef                   (rule 17)

	'boolean'      shift, and enter state 10
	'class'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	L_ident        shift, and enter state 2
	%eof           reduce using rule 16

	Ident          goto state 3
	TopDef         goto state 5
	FuncDef        goto state 6
	ClassDef       goto state 7
	ListTopDef     goto state 18
	Type           goto state 9

State 6

	TopDef -> FuncDef .                                 (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_ident        reduce using rule 6
	%eof           reduce using rule 6


State 7

	TopDef -> ClassDef .                                (rule 5)

	'boolean'      reduce using rule 5
	'class'        reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	L_ident        reduce using rule 5
	%eof           reduce using rule 5


State 8

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 9

	FuncDef -> Type . Ident '(' ListArg ')' Block       (rule 7)
	Type -> Type . '[]'                                 (rule 47)

	'[]'           shift, and enter state 17
	L_ident        shift, and enter state 2

	Ident          goto state 16

State 10

	Type -> 'boolean' .                                 (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	'++'           reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'--'           reduce using rule 45
	'.'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'='            reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'['            reduce using rule 45
	'[]'           reduce using rule 45
	']'            reduce using rule 45
	'||'           reduce using rule 45
	L_ident        reduce using rule 45


State 11

	ClassDef -> 'class' . Ident '{' ListClassMember '}'    (rule 11)
	ClassDef -> 'class' . Ident 'extends' Ident '{' ListClassMember '}'    (rule 12)

	L_ident        shift, and enter state 2

	Ident          goto state 15

State 12

	Type -> 'int' .                                     (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	'++'           reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'--'           reduce using rule 43
	'.'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'='            reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'['            reduce using rule 43
	'[]'           reduce using rule 43
	']'            reduce using rule 43
	'||'           reduce using rule 43
	L_ident        reduce using rule 43


State 13

	Type -> 'string' .                                  (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	'++'           reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'--'           reduce using rule 44
	'.'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'='            reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'['            reduce using rule 44
	'[]'           reduce using rule 44
	']'            reduce using rule 44
	'||'           reduce using rule 44
	L_ident        reduce using rule 44


State 14

	Type -> 'void' .                                    (rule 46)

	'!='           reduce using rule 46
	'%'            reduce using rule 46
	'&&'           reduce using rule 46
	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	'++'           reduce using rule 46
	','            reduce using rule 46
	'-'            reduce using rule 46
	'--'           reduce using rule 46
	'.'            reduce using rule 46
	'/'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'='            reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'['            reduce using rule 46
	'[]'           reduce using rule 46
	']'            reduce using rule 46
	'||'           reduce using rule 46
	L_ident        reduce using rule 46


State 15

	ClassDef -> 'class' Ident . '{' ListClassMember '}'    (rule 11)
	ClassDef -> 'class' Ident . 'extends' Ident '{' ListClassMember '}'    (rule 12)

	'extends'      shift, and enter state 20
	'{'            shift, and enter state 21


State 16

	FuncDef -> Type Ident . '(' ListArg ')' Block       (rule 7)

	'('            shift, and enter state 19


State 17

	Type -> Type '[]' .                                 (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	'++'           reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'--'           reduce using rule 47
	'.'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'='            reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'['            reduce using rule 47
	'[]'           reduce using rule 47
	']'            reduce using rule 47
	'||'           reduce using rule 47
	L_ident        reduce using rule 47


State 18

	ListTopDef -> TopDef ListTopDef .                   (rule 17)

	%eof           reduce using rule 17


State 19

	FuncDef -> Type Ident '(' . ListArg ')' Block       (rule 7)

	')'            reduce using rule 13
	'boolean'      shift, and enter state 10
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 24
	ListArg        goto state 25
	Type           goto state 26

State 20

	ClassDef -> 'class' Ident 'extends' . Ident '{' ListClassMember '}'    (rule 12)

	L_ident        shift, and enter state 2

	Ident          goto state 23

State 21

	ClassDef -> 'class' Ident '{' . ListClassMember '}'    (rule 11)

	'boolean'      reduce using rule 18
	'int'          reduce using rule 18
	'string'       reduce using rule 18
	'void'         reduce using rule 18
	'}'            reduce using rule 18
	L_ident        reduce using rule 18

	ListClassMembergoto state 22

State 22

	ClassDef -> 'class' Ident '{' ListClassMember . '}'    (rule 11)
	ListClassMember -> ListClassMember . ClassMember    (rule 19)

	'boolean'      shift, and enter state 10
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	'}'            shift, and enter state 34
	L_ident        shift, and enter state 2

	Ident          goto state 3
	FuncDef        goto state 31
	ClassMember    goto state 32
	Type           goto state 33

State 23

	ClassDef -> 'class' Ident 'extends' Ident . '{' ListClassMember '}'    (rule 12)

	'{'            shift, and enter state 30


State 24

	ListArg -> Arg .                                    (rule 14)
	ListArg -> Arg . ',' ListArg                        (rule 15)

	')'            reduce using rule 14
	','            shift, and enter state 29


State 25

	FuncDef -> Type Ident '(' ListArg . ')' Block       (rule 7)

	')'            shift, and enter state 28


State 26

	Arg -> Type . Ident                                 (rule 8)
	Type -> Type . '[]'                                 (rule 47)

	'[]'           shift, and enter state 17
	L_ident        shift, and enter state 2

	Ident          goto state 27

State 27

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 28

	FuncDef -> Type Ident '(' ListArg ')' . Block       (rule 7)

	'{'            shift, and enter state 39

	Block          goto state 38

State 29

	ListArg -> Arg ',' . ListArg                        (rule 15)

	')'            reduce using rule 13
	'boolean'      shift, and enter state 10
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 24
	ListArg        goto state 37
	Type           goto state 26

State 30

	ClassDef -> 'class' Ident 'extends' Ident '{' . ListClassMember '}'    (rule 12)

	'boolean'      reduce using rule 18
	'int'          reduce using rule 18
	'string'       reduce using rule 18
	'void'         reduce using rule 18
	'}'            reduce using rule 18
	L_ident        reduce using rule 18

	ListClassMembergoto state 36

State 31

	ClassMember -> FuncDef .                            (rule 10)

	'boolean'      reduce using rule 10
	'int'          reduce using rule 10
	'string'       reduce using rule 10
	'void'         reduce using rule 10
	'}'            reduce using rule 10
	L_ident        reduce using rule 10


State 32

	ListClassMember -> ListClassMember ClassMember .    (rule 19)

	'boolean'      reduce using rule 19
	'int'          reduce using rule 19
	'string'       reduce using rule 19
	'void'         reduce using rule 19
	'}'            reduce using rule 19
	L_ident        reduce using rule 19


State 33

	FuncDef -> Type . Ident '(' ListArg ')' Block       (rule 7)
	ClassMember -> Type . Ident ';'                     (rule 9)
	Type -> Type . '[]'                                 (rule 47)

	'[]'           shift, and enter state 17
	L_ident        shift, and enter state 2

	Ident          goto state 35

State 34

	ClassDef -> 'class' Ident '{' ListClassMember '}' .    (rule 11)

	'boolean'      reduce using rule 11
	'class'        reduce using rule 11
	'int'          reduce using rule 11
	'string'       reduce using rule 11
	'void'         reduce using rule 11
	L_ident        reduce using rule 11
	%eof           reduce using rule 11


State 35

	FuncDef -> Type Ident . '(' ListArg ')' Block       (rule 7)
	ClassMember -> Type Ident . ';'                     (rule 9)

	'('            shift, and enter state 19
	';'            shift, and enter state 42


State 36

	ClassDef -> 'class' Ident 'extends' Ident '{' ListClassMember . '}'    (rule 12)
	ListClassMember -> ListClassMember . ClassMember    (rule 19)

	'boolean'      shift, and enter state 10
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	'}'            shift, and enter state 41
	L_ident        shift, and enter state 2

	Ident          goto state 3
	FuncDef        goto state 31
	ClassMember    goto state 32
	Type           goto state 33

State 37

	ListArg -> Arg ',' ListArg .                        (rule 15)

	')'            reduce using rule 15


State 38

	FuncDef -> Type Ident '(' ListArg ')' Block .       (rule 7)

	'boolean'      reduce using rule 7
	'class'        reduce using rule 7
	'int'          reduce using rule 7
	'string'       reduce using rule 7
	'void'         reduce using rule 7
	'}'            reduce using rule 7
	L_ident        reduce using rule 7
	%eof           reduce using rule 7


State 39

	Block -> '{' . ListStmt '}'                         (rule 20)

	'!'            reduce using rule 36
	'('            reduce using rule 36
	'-'            reduce using rule 36
	';'            reduce using rule 36
	'boolean'      reduce using rule 36
	'cast'         reduce using rule 36
	'false'        reduce using rule 36
	'for'          reduce using rule 36
	'if'           reduce using rule 36
	'int'          reduce using rule 36
	'new'          reduce using rule 36
	'return'       reduce using rule 36
	'string'       reduce using rule 36
	'true'         reduce using rule 36
	'void'         reduce using rule 36
	'while'        reduce using rule 36
	'{'            reduce using rule 36
	'}'            reduce using rule 36
	L_ident        reduce using rule 36
	L_integ        reduce using rule 36
	L_quoted       reduce using rule 36

	ListStmt       goto state 40

State 40

	Block -> '{' ListStmt . '}'                         (rule 20)
	ListStmt -> ListStmt . Stmt                         (rule 37)

	'!'            shift, and enter state 56
	'('            shift, and enter state 57
	'-'            shift, and enter state 58
	';'            shift, and enter state 59
	'boolean'      shift, and enter state 10
	'cast'         shift, and enter state 60
	'false'        shift, and enter state 61
	'for'          shift, and enter state 62
	'if'           shift, and enter state 63
	'int'          shift, and enter state 12
	'new'          shift, and enter state 64
	'return'       shift, and enter state 65
	'string'       shift, and enter state 13
	'true'         shift, and enter state 66
	'void'         shift, and enter state 14
	'while'        shift, and enter state 67
	'{'            shift, and enter state 39
	'}'            shift, and enter state 68
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 69
	L_quoted       shift, and enter state 70

	Ident          goto state 43
	Integer        goto state 44
	String         goto state 45
	Block          goto state 46
	Stmt           goto state 47
	Type           goto state 48
	Expr6          goto state 49
	Expr5          goto state 50
	Expr4          goto state 51
	Expr3          goto state 52
	Expr2          goto state 53
	Expr1          goto state 54
	Expr           goto state 55

State 41

	ClassDef -> 'class' Ident 'extends' Ident '{' ListClassMember '}' .    (rule 12)

	'boolean'      reduce using rule 12
	'class'        reduce using rule 12
	'int'          reduce using rule 12
	'string'       reduce using rule 12
	'void'         reduce using rule 12
	L_ident        reduce using rule 12
	%eof           reduce using rule 12


State 42

	ClassMember -> Type Ident ';' .                     (rule 9)

	'boolean'      reduce using rule 9
	'int'          reduce using rule 9
	'string'       reduce using rule 9
	'void'         reduce using rule 9
	'}'            reduce using rule 9
	L_ident        reduce using rule 9


State 43

	Type -> Ident .                                     (rule 42)
	Expr6 -> Ident .                                    (rule 55)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 60)

	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'&&'           reduce using rule 55
	'('            shift, and enter state 107
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	'++'           reduce using rule 55
	'-'            reduce using rule 55
	'--'           reduce using rule 55
	'.'            reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'='            reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'['            reduce using rule 55
	'[]'           reduce using rule 42
	'||'           reduce using rule 55
	L_ident        reduce using rule 42


State 44

	Expr6 -> Integer .                                  (rule 56)

	'!='           reduce using rule 56
	'%'            reduce using rule 56
	'&&'           reduce using rule 56
	')'            reduce using rule 56
	'*'            reduce using rule 56
	'+'            reduce using rule 56
	'++'           reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'--'           reduce using rule 56
	'.'            reduce using rule 56
	'/'            reduce using rule 56
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'='            reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'['            reduce using rule 56
	']'            reduce using rule 56
	'||'           reduce using rule 56


State 45

	Expr6 -> String .                                   (rule 59)

	'!='           reduce using rule 59
	'%'            reduce using rule 59
	'&&'           reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	'++'           reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'--'           reduce using rule 59
	'.'            reduce using rule 59
	'/'            reduce using rule 59
	';'            reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'='            reduce using rule 59
	'=='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	'['            reduce using rule 59
	']'            reduce using rule 59
	'||'           reduce using rule 59


State 46

	Stmt -> Block .                                     (rule 22)

	'!'            reduce using rule 22
	'('            reduce using rule 22
	'-'            reduce using rule 22
	';'            reduce using rule 22
	'boolean'      reduce using rule 22
	'cast'         reduce using rule 22
	'else'         reduce using rule 22
	'false'        reduce using rule 22
	'for'          reduce using rule 22
	'if'           reduce using rule 22
	'int'          reduce using rule 22
	'new'          reduce using rule 22
	'return'       reduce using rule 22
	'string'       reduce using rule 22
	'true'         reduce using rule 22
	'void'         reduce using rule 22
	'while'        reduce using rule 22
	'{'            reduce using rule 22
	'}'            reduce using rule 22
	L_ident        reduce using rule 22
	L_integ        reduce using rule 22
	L_quoted       reduce using rule 22


State 47

	ListStmt -> ListStmt Stmt .                         (rule 37)

	'!'            reduce using rule 37
	'('            reduce using rule 37
	'-'            reduce using rule 37
	';'            reduce using rule 37
	'boolean'      reduce using rule 37
	'cast'         reduce using rule 37
	'false'        reduce using rule 37
	'for'          reduce using rule 37
	'if'           reduce using rule 37
	'int'          reduce using rule 37
	'new'          reduce using rule 37
	'return'       reduce using rule 37
	'string'       reduce using rule 37
	'true'         reduce using rule 37
	'void'         reduce using rule 37
	'while'        reduce using rule 37
	'{'            reduce using rule 37
	'}'            reduce using rule 37
	L_ident        reduce using rule 37
	L_integ        reduce using rule 37
	L_quoted       reduce using rule 37


State 48

	Stmt -> Type . ListItem ';'                         (rule 23)
	Type -> Type . '[]'                                 (rule 47)

	'[]'           shift, and enter state 17
	L_ident        shift, and enter state 2

	Ident          goto state 104
	Item           goto state 105
	ListItem       goto state 106

State 49

	Expr6 -> Expr6 . '.' Ident                          (rule 53)
	Expr6 -> Expr6 . '.' Ident '(' ListExpr ')'         (rule 54)
	Expr6 -> Expr6 . '[' Expr ']'                       (rule 61)
	Expr5 -> Expr6 .                                    (rule 66)

	'!='           reduce using rule 66
	'%'            reduce using rule 66
	'&&'           reduce using rule 66
	')'            reduce using rule 66
	'*'            reduce using rule 66
	'+'            reduce using rule 66
	'++'           reduce using rule 66
	','            reduce using rule 66
	'-'            reduce using rule 66
	'--'           reduce using rule 66
	'.'            shift, and enter state 102
	'/'            reduce using rule 66
	';'            reduce using rule 66
	'<'            reduce using rule 66
	'<='           reduce using rule 66
	'='            reduce using rule 66
	'=='           reduce using rule 66
	'>'            reduce using rule 66
	'>='           reduce using rule 66
	'['            shift, and enter state 103
	']'            reduce using rule 66
	'||'           reduce using rule 66


State 50

	Expr4 -> Expr5 .                                    (rule 68)

	'!='           reduce using rule 68
	'%'            reduce using rule 68
	'&&'           reduce using rule 68
	')'            reduce using rule 68
	'*'            reduce using rule 68
	'+'            reduce using rule 68
	'++'           reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'--'           reduce using rule 68
	'/'            reduce using rule 68
	';'            reduce using rule 68
	'<'            reduce using rule 68
	'<='           reduce using rule 68
	'='            reduce using rule 68
	'=='           reduce using rule 68
	'>'            reduce using rule 68
	'>='           reduce using rule 68
	']'            reduce using rule 68
	'||'           reduce using rule 68


State 51

	Expr4 -> Expr4 . MulOp Expr5                        (rule 67)
	Expr3 -> Expr4 .                                    (rule 70)

	'!='           reduce using rule 70
	'%'            shift, and enter state 99
	'&&'           reduce using rule 70
	')'            reduce using rule 70
	'*'            shift, and enter state 100
	'+'            reduce using rule 70
	'++'           reduce using rule 70
	','            reduce using rule 70
	'-'            reduce using rule 70
	'--'           reduce using rule 70
	'/'            shift, and enter state 101
	';'            reduce using rule 70
	'<'            reduce using rule 70
	'<='           reduce using rule 70
	'='            reduce using rule 70
	'=='           reduce using rule 70
	'>'            reduce using rule 70
	'>='           reduce using rule 70
	']'            reduce using rule 70
	'||'           reduce using rule 70

	MulOp          goto state 98

State 52

	Expr3 -> Expr3 . AddOp Expr4                        (rule 69)
	Expr2 -> Expr3 .                                    (rule 72)

	'!='           reduce using rule 72
	'&&'           reduce using rule 72
	')'            reduce using rule 72
	'+'            shift, and enter state 96
	'++'           reduce using rule 72
	','            reduce using rule 72
	'-'            shift, and enter state 97
	'--'           reduce using rule 72
	';'            reduce using rule 72
	'<'            reduce using rule 72
	'<='           reduce using rule 72
	'='            reduce using rule 72
	'=='           reduce using rule 72
	'>'            reduce using rule 72
	'>='           reduce using rule 72
	']'            reduce using rule 72
	'||'           reduce using rule 72

	AddOp          goto state 95

State 53

	Expr2 -> Expr2 . RelOp Expr3                        (rule 71)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 73)
	Expr1 -> Expr2 .                                    (rule 74)

	'!='           shift, and enter state 88
	'&&'           shift, and enter state 89
	')'            reduce using rule 74
	'++'           reduce using rule 74
	','            reduce using rule 74
	'--'           reduce using rule 74
	';'            reduce using rule 74
	'<'            shift, and enter state 90
	'<='           shift, and enter state 91
	'='            reduce using rule 74
	'=='           shift, and enter state 92
	'>'            shift, and enter state 93
	'>='           shift, and enter state 94
	']'            reduce using rule 74
	'||'           reduce using rule 74

	RelOp          goto state 87

State 54

	Expr -> Expr1 . '||' Expr                           (rule 75)
	Expr -> Expr1 .                                     (rule 76)

	')'            reduce using rule 76
	'++'           reduce using rule 76
	','            reduce using rule 76
	'--'           reduce using rule 76
	';'            reduce using rule 76
	'='            reduce using rule 76
	']'            reduce using rule 76
	'||'           shift, and enter state 86


State 55

	Stmt -> Expr . '=' Expr ';'                         (rule 24)
	Stmt -> Expr . '++' ';'                             (rule 25)
	Stmt -> Expr . '--' ';'                             (rule 26)
	Stmt -> Expr . ';'                                  (rule 33)
